--- a/styles/utils.css
+++ b/styles/utils.css
@@ -16,7 +16,8 @@
 /* xxl */
 /* @media (min-width: 1536px) {} */
 
-.btn {
+.bn5 {
+  position: relative;
   display: inline-block;
   font-weight: 600;
   text-decoration: none;
@@ -30,11 +31,75 @@
   transition: transform 0.3s, box-shadow 0.3s;
 }
 
-.btn:hover {
+.bn5:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowingbn5 20s linear infinite;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+@keyframes glowingbn5 {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.bn5:active {
+  color: #000;
+}
+
+.bn5:active:after {
+  background: transparent;
+}
+
+.bn5:hover:before {
+  opacity: 1;
+}
+
+.bn5:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #191919;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+
+/* .btn:hover {
   transform: translateY(-3px);
   box-shadow: 0 14px 28px rgba(225, 29, 72, 0.25),
     0 10px 10px rgba(255, 29, 72, 0.22), 0 0 120px -10px var(--clr-rose);
-}
+} */
 
 .container {
   width: 100%;
@@ -92,5 +157,8 @@
 @media (min-width: 1536px) {
   .container {
     max-width: 1536px;
+  }
+  .section {
+    margin-top: 10rem;
   }
 }
