--- a/styles/components/work.css
+++ b/styles/components/work.css
@@ -1,7 +1,10 @@
+.work {
+  text-align: center;
+}
+
 .work__title {
   font-size: var(--size-2xl);
   color: var(--clr-light);
-  text-align: center;
 }
 
 .work__description {
@@ -11,7 +14,58 @@
   text-align: center;
   margin: 1rem auto;
 }
-/* xs */
+
+.work__project-title {
+  font-size: var(--size-base);
+  margin-bottom: 1rem;
+}
+
+.work__img-wrapper {
+  position: relative;
+}
+
+.work__img-wrapper::after {
+  content: "";
+  background-color: rgba(28, 25, 83, 0.2);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  transition: background-color 0.3s;
+}
+
+.work__img-wrapper:hover::after {
+  background-color: rgba(79, 70, 229, 0);
+}
+
+.work__project:not(:last-child) {
+  margin-bottom: 5rem;
+}
+
+.work_project-description1 {
+  font-size: var(--size-sm);
+  color: var(--clr-slate600);
+  margin: 1rem 0;
+}
+
+.work_project-description2 {
+  font-size: var(--size-sm);
+  color: var(--clr-slate400);
+  margin-bottom: 1rem;
+}
+
+.work_project-button {
+  font-size: var(--size-sm);
+}
+
+.work__project-subtitle {
+  display: none;
+}
+/* -------------------- MEDIA QUERIES -------------------- */
+
+/* -------------------- xs -------------------- */
 @media (min-width: 475px) {
   .work__title {
     font-size: var(--size-3xl);
@@ -21,15 +75,109 @@
     font-size: var(--size-base);
     margin: 1.5rem auto;
   }
+
+  .work__project-title {
+    font-size: var(--size-base);
+    margin-bottom: 1.5rem;
+  }
+  .work_project-description1 {
+    font-size: var(--size-base);
+    margin: 1.5rem 0;
+  }
+
+  .work_project-description2 {
+    font-size: var(--size-base);
+    margin-bottom: 1.5rem;
+  }
+
+  .work_project-button {
+    font-size: var(--size-base);
+  }
 }
 
-/* sm */
-/* @media (min-width: 640px) {} */
+/* -------------------- sm -------------------- */
+@media (min-width: 640px) {
+  .work__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas:
+      "image1 content1"
+      "content2 image2"
+      "image3 content3";
+    place-items: center;
+  }
+
+  .work__image1 {
+    grid-area: image2;
+  }
+  .work__image2 {
+    grid-area: image1;
+  }
+  .work__image3 {
+    grid-area: image3;
+  }
+
+  .work__content1 {
+    grid-area: content2;
+  }
+  .work__content2 {
+    grid-area: content1;
+  }
+  .work__content3 {
+    grid-area: content3;
+  }
+
+  .work__project {
+    padding: 0 1rem;
+  }
+
+  .work__project-title {
+    display: none;
+  }
+  .work_project-description1 {
+    font-size: var(--size-xs);
+    margin: 1em 0;
+  }
+
+  .work_project-description2 {
+    font-size: var(--size-xs);
+    margin-bottom: 1em;
+  }
+
+  .work_project-button {
+    font-size: var(--size-xs);
+  }
+
+  .work__project:not(:last-child) {
+    margin-bottom: 0;
+  }
+
+  .work__project-subtitle {
+    display: block;
+    font-size: var(--size-base);
+  }
+}
 
 /* md */
-/* @media (min-width: 768px) {} */
+@media (min-width: 768px) {
+  .work_project-description1 {
+    font-size: var(--size-sm);
+  }
 
-/* lg */
+  .work_project-description2 {
+    font-size: var(--size-sm);
+  }
+
+  .work_project-button {
+    font-size: var(--size-sm);
+  }
+
+  .work__project-subtitle {
+    font-size: var(--size-lg);
+  }
+}
+
+/* -------------------- lg -------------------- */
 @media (min-width: 1024px) {
   .work__title {
     font-size: var(--size-4xl);
@@ -39,9 +187,25 @@
     font-size: var(--size-lg);
     margin: 1.5rem auto;
   }
+
+  .work_project-description1 {
+    font-size: var(--size-base);
+  }
+
+  .work_project-description2 {
+    font-size: var(--size-base);
+  }
+
+  .work_project-button {
+    font-size: var(--size-base);
+  }
+
+  .work__project-subtitle {
+    font-size: var(--size-xl);
+  }
 }
 
-/* xl */
+/* -------------------- xl -------------------- */
 @media (min-width: 1280px) {
   .work__title {
     font-size: var(--size-5xl);
@@ -51,7 +215,32 @@
     font-size: var(--size-xl);
     margin: 2rem auto;
   }
+
+  .work_project-description1 {
+    font-size: var(--size-lg);
+  }
+
+  .work_project-description2 {
+    font-size: var(--size-lg);
+  }
+
+  .work_project-button {
+    font-size: var(--size-lg);
+  }
+
+  .work__project-subtitle {
+    font-size: var(--size-2xl);
+  }
+
+  .work__container {
+    width: 80%;
+    margin: 0 auto;
+  }
 }
 
 /* xxl */
-/* @media (min-width: 1536px) {} */
+@media (min-width: 1536px) {
+  .work__container {
+    width: 70%;
+  }
+}
