--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -38,8 +38,8 @@
 .about__ul {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  list-style-type: "\1F4AB";
+  gap: 1.5rem;
+  list-style-type: none;
   padding-left: 1em;
   flex: 1;
 }
@@ -152,3 +152,45 @@
 
 /* xxl */
 /* @media (min-width: 1536px) {} */
+
+.icon-html {
+  color: #e34f26; /* Warna ikon */
+  font-size: 28px; /* Ukuran ikon */
+  margin-right: 8px; /* Jarak antara ikon dan teks */
+  vertical-align: middle;
+}
+
+.icon-css {
+  color: #1572b6; /* Warna ikon */
+  font-size: 28px; /* Ukuran ikon */
+  margin-right: 8px; /* Jarak antara ikon dan teks */
+  vertical-align: middle;
+}
+
+.icon-js {
+  color: #f7df1e; /* Warna ikon */
+  font-size: 24px; /* Ukuran ikon */
+  margin-right: 8px; /* Jarak antara ikon dan teks */
+  vertical-align: middle;
+}
+
+.icon-react {
+  color: #61dafb; /* Warna ikon */
+  font-size: 24px; /* Ukuran ikon */
+  margin-right: 8px; /* Jarak antara ikon dan teks */
+  vertical-align: middle;
+}
+
+.icon-tailwind {
+  width: 24px; /* Ukuran ikon */
+  margin-right: 8px; /* Jarak antara ikon dan teks */
+  display: inline-block;
+}
+
+.icon-figma {
+  width: 16px; /* Ukuran ikon */
+  margin-right: 12px; /* Jarak antara ikon dan teks */
+  margin-left: 4px;
+  vertical-align: middle; /* Menyelaraskan ikon dengan teks */
+  display: inline-block;
+}
