--- a/styles/components/work.css
+++ b/styles/components/work.css
@@ -5,7 +5,7 @@
 .work__title {
   font-size: var(--size-2xl);
   color: var(--clr-light);
-  margin-bottom: 50px;
+  margin-bottom: 70px;
 }
 
 .work__description {
@@ -104,28 +104,35 @@
     grid-template-areas:
       "image1 content1"
       "content2 image2"
-      "image3 content3";
+      "image3 content3"
+      "content4 image4 ";
     place-items: center;
   }
 
   .work__image1 {
-    grid-area: image2;
+    grid-area: image1;
   }
   .work__image2 {
-    grid-area: image1;
+    grid-area: image2;
   }
   .work__image3 {
     grid-area: image3;
   }
+  .work__image4 {
+    grid-area: image4;
+  }
 
   .work__content1 {
-    grid-area: content2;
+    grid-area: content1;
   }
   .work__content2 {
-    grid-area: content1;
+    grid-area: content2;
   }
   .work__content3 {
     grid-area: content3;
+  }
+  .work__content4 {
+    grid-area: content4;
   }
 
   .work__project {
